2008-05-07  Bob Wilson  <bob.wilson@acm.org>

	* elf32-xtensa.c (xtensa_property_section_name): New.
	(xtensa_make_property_section): New.
	(xtensa_get_property_section): Make static.  Do not create a new
	section if it does not exist.

2008-05-08  Alan Modra  <amodra@bigpond.net.au>

	* elf32-spu.c (spu_elf_special_sections): Add "._ea".
	(spu_elf_relocate_section): Handle relocations against symbols
	defined in ._ea specially.

2008-05-03  Daniel Jacobowitz  <dan@codesourcery.com>

	* elf32-arm.c (elf32_arm_symbian_link_hash_table_create): Use
	ARRAY_SIZE.
	(elf32_arm_symbian_plt_sym_val): New.
	(elf_backend_plt_sym_val): Define.

2008-05-03  Alan Modra  <amodra@bigpond.net.au>

	PR 2995, PR 6473
	* elf.c (rewrite_elf_program_header): Rather than clearing
	p_paddr_valid at end, don't set it in the first place.  Delete
	comment no longer relevant.  When not p_paddr_valid, don't set
	paddr from vaddr, and don't set p_vaddr_offset.

2008-05-01  Cary Coutant  <ccoutant@google.com>

	* elf.c (bfd_elf_get_str_section): Fix memory leak caused by
	corrupt string table.

2008-05-01  Joel Brobecker  <brobecker@adacore.com>

	* cache.c (cache_bread_1): Renames cache_bread.
	(cache_bread): New function.

2008-05-01  Alan Modra  <amodra@bigpond.net.au>

	PR 2995, PR 6473
	* elf.c (_bfd_elf_make_section_from_shdr): Always set lma from p_paddr.
	(assign_file_positions_for_load_sections): Combine nested "if".
	(copy_elf_program_header): Don't set p_paddr_valid or p_vaddr_offset
	when all header p_paddr fields are zero.

2008-04-30  Edmar Wienskoski  <edmar@freescale.com>

	* cpu-powerpc.c (bfd_powerpc_archs): Add e500mc entry.

2008-04-29  Daniel Jacobowitz  <dan@codesourcery.com>

	* elf.c (_bfd_elf_get_dynamic_reloc_upper_bound)
	(_bfd_elf_canonicalize_dynamic_reloc): Find dynamic relocations
	even if they are not loaded.
	* elflink.c (_bfd_elf_init_2_index_sections): Set data_index_section
	first.

2008-04-25  Jay Foad  <jay.foad@gmail.com>
